--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -1,19 +1,10 @@
 {% extends 'assetstracking/main.html' %}
-
+{% load static %}
 {% block content %}
 {% if perms.user.add_employee %}
 <br>
 
 <div class="row">
-	<!--div class="col-md">
-		<div class="card card-body">
-			<h5>Subscriber options:</h5>
-			<hr>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'createAsset' %}">ADD asset</a>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="">Add employee</a>
-		</div>
-	</div-->
-
 	<div class="col-md">
 		<div class="card card-body">
 			<h5>Subscriber Information</h5>
@@ -99,7 +90,7 @@
 	<div class="col-md">
 		<h5>Assets</h5>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'createAsset' %}">ADD Asset</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'createAsset' user.employee.subscriber_id.subscriber_id %}">ADD Asset</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Tag ID</th>
