--- a/assetstracking/templates/assetstracking/createBorrowing.html
+++ b/assetstracking/templates/assetstracking/createBorrowing.html
@@ -1,5 +1,7 @@
 {%  extends 'assetstracking/main.html' %}
 {% load static %}
+{%load crispy_forms_tags %} 
+
 {% block content %}
 
 
@@ -12,7 +14,7 @@
 				{% csrf_token %}
 				{{ formset.management_form }}
 				{% for form in formset %}
-				    {{form}}
+				    {{form|crispy }}
 					<hr>
 				{% endfor %}
 
