--- a/assetstracking/templates/assetstracking/navbar1.html
+++ b/assetstracking/templates/assetstracking/navbar1.html
@@ -17,7 +17,7 @@
       </li>
       <li class="nav-item active">
         {% if perms.user.add_employee %}
-              <a class="nav-link" href="{% url 'login' %}">You have permission to do something in the app</a>
+              <a class="nav-link" href="{% url 'login' %}">Welcome</a>
           {% else %}
               <a class="nav-link" href="{% url 'login' %}">You do not have permission to do something in the app</a>
           {% endif %}
