--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -10,7 +10,7 @@
 			<h5>Subscriber Information</h5>
 			<hr>
 			<p>Name: {{subscriber.subscriber_name}} </p>
-			<p>Phone: {{subscriber.subscriber_id}} </p>
+			<p>Subscriber ID: {{subscriber.subscriber_id}} </p>
 		</div>
 	</div>
 </div>
