--- a/assetstracking/templates/assetstracking/deleteBorrowing.html
+++ b/assetstracking/templates/assetstracking/deleteBorrowing.html
@@ -13,7 +13,7 @@
 			<form action="{% url 'deleteBorrowing' item.id  %}" method="POST">
 				
 				{% csrf_token %}
-				<a class="btn btn-warning" href="{% url 'home' %}">Cancel</a>
+				<a class="btn btn-warning" href="{% url 'subscriber' user.employee.subscriber_id.subscriber_id %}">Cancel</a>
 
 				<input class="btn btn-danger" type="submit" name="Confirm">
 			</form>
