--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -75,7 +75,7 @@
 					<td>{{i.tag_id}}</td>
 					<td>{{i.start_date}}</td>
 					<td>{{i.end_date}}</td>
-					<td><a class="btn btn-sm btn-info" href="{% url 'updateBorrowing' i.id %}">Update</a></td>
+					<!---<td><a class="btn btn-sm btn-info" href="{% url 'updateBorrowing' i.id %}">Update</a></td>-->
 					<td><a class="btn btn-sm btn-danger" href="{% url 'deleteBorrowing' i.id %}">Remove</a></td>
 				</tr>
 				{% endfor %}
