--- a/assetstracking/templates/assetstracking/navbar1.html
+++ b/assetstracking/templates/assetstracking/navbar1.html
@@ -10,7 +10,7 @@
           <a class="nav-link" href="{% url 'index' %}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'tags' user.employee.subscriber_id.subscriber_id %}">Tags</a>
+        <a class="nav-link" href="{% url 'tags' subscriber.subscriber_id %}">Tags</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
