--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -10,7 +10,7 @@
 			<h5>Subscriber Information</h5>
 			<hr>
 			<p>Name: {{subscriber.subscriber_name}} </p>
-			<p>Subscriber ID: {{subscriber.subscriber_id}} </p>
+			<p>Phone: {{subscriber.subscriber_id}} </p>
 		</div>
 	</div>
 </div>
@@ -75,7 +75,7 @@
 					<td>{{i.tag_id}}</td>
 					<td>{{i.start_date}}</td>
 					<td>{{i.end_date}}</td>
-					<!---<td><a class="btn btn-sm btn-info" href="{% url 'updateBorrowing' i.id %}">Update</a></td>-->
+					<td><a class="btn btn-sm btn-info" href="{% url 'updateBorrowing' i.id %}">Update</a></td>
 					<td><a class="btn btn-sm btn-danger" href="{% url 'deleteBorrowing' i.id %}">Remove</a></td>
 				</tr>
 				{% endfor %}
@@ -89,8 +89,13 @@
 <div class="row">
 	<div class="col-md">
 		<h5>Assets</h5>
+		{% if user.username == "Khatim" or user.username == "Yousef" or user.username == "osama" %}
 		<div class="card card-body">
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'createAsset' 1 %}">ADD Asset</a>
+		{% else %}
+			<div class="card card-body">
 			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'createAsset' user.employee.subscriber_id.subscriber_id %}">ADD Asset</a>
+		{% endif %}
 			<table class="table table-sm">
 				<tr>
 					<th>Tag ID</th>
