--- a/assetstracking/templates/assetstracking/navbar1.html
+++ b/assetstracking/templates/assetstracking/navbar1.html
@@ -9,26 +9,28 @@
       <li class="nav-item active">
           <a class="nav-link" href="{% url 'index' %}">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'tags' user.employee.subscriber_id.subscriber_id %}">Tags</a>
-      </li>
+      {% if user.username == "Khatim" or user.username == "Yousef" or user.username == "osama" %}
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'tags' 1 %}">Tags</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'tags' user.employee.subscriber_id.subscriber_id %}">Tags</a>
+        </li>
+      {% endif %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
       </li>
-      <li class="text-white nav-item active">
+      <li class="nav-item active">
         {% if perms.user.add_employee %}
-              <h5 class="nav-item">..........Welcome..............</h5>
+              <a class="nav-link" href="{% url 'login' %}">You have permission to do something in the app</a>
           {% else %}
               <a class="nav-link" href="{% url 'login' %}">You do not have permission to do something in the app</a>
           {% endif %}
       </li>
 	 {% if user.is_authenticated %}
-       <li class="text-white nav-item active"> 
-	       <h5> User: {{ user.get_username }}</h5>
-	</li>
-	   <li class="text-white nav-item active">
-		    <h5>........Name of employee: {{ user.employee.employee_name }} </h5>
-	  </li>
+       <li class="text-white nav-item active"> User: {{ user.get_username }}</li>
+	   <li class="text-white nav-item active">........Name of employee: {{ user.employee.employee_name }}</li>
 	 {% else %}
        <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
 	 {% endif %}
