--- a/assetstracking/templates/assetstracking/extendBorrowing.html
+++ b/assetstracking/templates/assetstracking/extendBorrowing.html
@@ -1,6 +1,6 @@
 {%  extends 'assetstracking/main.html' %}
 {% load static %}
-
+{%load crispy_forms_tags %} 
 {% block content %}
 
 
@@ -10,7 +10,7 @@
 
 			<form action="" method="POST">
 				{% csrf_token %}
-				    {{ form}}
+				   {{ form|crispy }}
 					<hr>
 				<input type="submit" name="Submit">
 			</form>
