--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -65,7 +65,7 @@
 					<th>Asset</th>
 					<th>Start Date</th>
 					<th>End Date</th>
-					<th>Update</th>
+					<th>Extend</th>
 					<th>Remove</th>
 				</tr>
 				{% for i in borrowings %}
@@ -75,7 +75,7 @@
 					<td>{{i.tag_id}}</td>
 					<td>{{i.start_date}}</td>
 					<td>{{i.end_date}}</td>
-					<td><a class="btn btn-sm btn-info" href="{% url 'updateBorrowing' i.id %}">Update</a></td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'extendBorrowing' i.id %}">extend</a></td>
 					<td><a class="btn btn-sm btn-danger" href="{% url 'deleteBorrowing' i.id %}">Remove</a></td>
 				</tr>
 				{% endfor %}
