--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -124,6 +124,7 @@
 	<div class="col-md">
 		<h5>RFID Readers</h5>
 		<div class="card card-body">
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'createReader' user.employee.subscriber_id.subscriber_id %}">ADD Reader</a>
 			<table class="table table-sm">
 				<tr>
 					<th>RFID Reader ID</th>
