--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -129,11 +129,15 @@
 				<tr>
 					<th>RFID Reader ID</th>
 					<th>RFID Reader Location</th>
+					<th>Update</th>
+					<th>Remove</th>
 				</tr>
 				{% for i in rfids %}
 				<tr>
 					<td>{{i.rfid_id}}</td>
 					<td>{{i.rfid_location}}</td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'updateReader' i.id %}">Update</a></td>
+					<td><a class="btn btn-sm btn-danger" href="{% url 'deleteReader' i.id %}">Remove</a></td>
 				</tr>
 				{% endfor %}
 			</table>
