--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -101,6 +101,7 @@
 					<th>Tag ID</th>
 					<th>Asset Name</th>
 					<th>Last RFID Reading Location</th>
+					<th>LAsset Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
@@ -109,6 +110,7 @@
 					<td>{{i.tag_id}}</td>
 					<td>{{i.asset_name}}</td>
 					<th>{{i.asset_location}}</th>
+					<th>{{i.asset_status}}</th>
 					<td><a class="btn btn-sm btn-info" href="{% url 'updateAsset' i.id %}">Update</a></td>
 					<td><a class="btn btn-sm btn-danger" href="{% url 'deleteAsset' i.id %}">Remove</a></td>
 				</tr>
@@ -156,6 +158,7 @@
 					<th>View</th>
 					<th>Employee ID</th>
 					<th>Employee Name</th>
+					<th>Employee Email</th>
 					<!--th>Update</th>
 					<th>Remove</th-->
 				</tr>
@@ -164,6 +167,7 @@
 					<td><a class="btn btn-sm btn-info" href="{% url 'employee' i.id %}">View</a></td>
 					<td>{{i.employee_id}}</td>
 					<td>{{i.employee_name}}</td>
+					<td>{{i.employee_email}}</td>
 					<!--td><a class="btn btn-sm btn-info" href="">Update</a></td>
 					<td><a class="btn btn-sm btn-danger" href="">Remove</a></td-->
 				</tr>
