--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -72,7 +72,7 @@
 				</tr>
 				{% for i in borrowings %}
 				<tr>
-					<td><a href="{% url 'employee' i.employee_id.id %}">{{i.employee_id}}</a></td>
+					<td>{{i.employee_id}}</td>
 					<td>{{i.tag_id}}</td>
 					<td>{{i.start_date}}</td>
 					<td>{{i.end_date}}</td>
