--- a/assetstracking/templates/assetstracking/subscriber.html
+++ b/assetstracking/templates/assetstracking/subscriber.html
@@ -105,7 +105,7 @@
 					<th>Tag ID</th>
 					<th>Asset Name</th>
 					<th>Last RFID Reading Location</th>
-					<th>LAsset Status</th>
+					<th>Asset Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
